projects/vb6parse/snapshots/parsers/cst/library/string/rtrim/rtrim_function_return.snap
---
source: projects/vb6parse/tests/library/string/rtrim.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: FunctionStatement
      children:
        - kind: FunctionKeyword
          text: Function
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: CleanText
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Identifier
              text: s
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: StringKeyword
              text: String
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "                "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: CleanText
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: RTrim
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: s
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "            "
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
